--- a/Expanding_Cards/index.html
+++ b/Expanding_Cards/index.html
@@ -8,6 +8,47 @@
     <title>Expanding Cards</title>
   </head>
   <body>
+    <div class="container">
+      <div
+        class="panel active"
+        style="background-image: url('pexels-tobi-620337.jpg')"
+      >
+        <h3>Explore The World</h3>
+      </div>
+    </div>
+    <div class="container">
+      <div
+        class="panel"
+        style="background-image: url('pexels-tobi-620337.jpg')"
+      >
+        <h3>Explore World</h3>
+      </div>
+    </div>
+    <div class="container">
+      <div
+        class="panel"
+        style="background-image: url('pexels-tobi-620337.jpg')"
+      >
+        <h3>Explore World</h3>
+      </div>
+    </div>
+    <div class="container">
+      <div
+        class="panel"
+        style="background-image: url('pexels-tobi-620337.jpg')"
+      >
+        <h3>Explore</h3>
+      </div>
+    </div>
+    <div class="container">
+      <div
+        class="panel"
+        style="background-image: url('pexels-tobi-620337.jpg')"
+      >
+        <h3>Explore World</h3>
+      </div>
+    </div>
+
     <script src="script.css"></script>
   </body>
 </html>
