--- a/Expanding_Cards/index.html
+++ b/Expanding_Cards/index.html
@@ -10,7 +10,7 @@
   <body>
     <div class="container">
       <div
-        class="panel active"
+        class="panel"
         style="background-image: url('pexels-tobi-620337.jpg')"
       >
         <h3>Explore The World</h3>
@@ -18,7 +18,7 @@
     </div>
     <div class="container">
       <div
-        class="panel"
+        class="panel active"
         style="background-image: url('pexels-tobi-620337.jpg')"
       >
         <h3>Explore World</h3>
@@ -49,6 +49,6 @@
       </div>
     </div>
 
-    <script src="script.css"></script>
+    <script src="script.js"></script>
   </body>
 </html>
